# serial-assistant-plugin

./: Cargo.toml  README.md  config.toml  serial.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  serial_client.rs
